remove tokens return from verify endpoint
