# docs/swagger.json
@@ -177,10 +177,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/auth.Tokens"
-                        }
+                        "description": "OK"
                     },
                     "400": {
                         "description": "Bad Request",
@@ -663,6 +660,7 @@
             "properties": {
                 "login": {
                     "type": "string",
+                    "maxLength": 255,
                     "minLength": 3
                 },
                 "password": {
@@ -683,17 +681,21 @@
             "properties": {
                 "confirmPassword": {
                     "type": "string",
+                    "maxLength": 72,
                     "minLength": 6
                 },
                 "email": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 255
                 },
                 "password": {
                     "type": "string",
+                    "maxLength": 72,
                     "minLength": 6
                 },
                 "username": {
                     "type": "string",
+                    "maxLength": 32,
                     "minLength": 3
                 }
             }
